--- a/about.html
+++ b/about.html
@@ -205,30 +205,41 @@
                     My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that support teachers in creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions developed are both effective and user-friendly.
                 </p>
             </div>
-                   <h3>Dissertation Plans</h3>
+                   <h2>Dissertation Plans</h2>
                 <p>
                     As I work towards completing my disseration, this is my planned timeline. <br>
-                    <h2>Spring 2025</h2>
+                    <h3>Spring 2025</h3>
                     <li>Complete the comprehesive exam and portfolio review. </li>
                     <li>Continue my research project on the use of Generative AI in Special Education by conducting a particapatory design study with special edcuators on accessible AI generated leasson plans.</li>
-                    <li>Start writing my proposal document.</li>
-                    <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
-                    <li>Suport the Digital Harbor Space for All project.</li>
-                    <li>Finalize my committee members.</li>
+                    <li>Start writing my proposal document</li>
+                    <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI)</li>
+                    <li>Suport the Digital Harbor Space for All project</li>
+                    <li>Finalize my committee members</li>
                     <br>
-                    <h2>Fall 2025</h2>
+                    <h3>Fall 2025</h3>
                     <li>Propose early in the semester</li>
-                    <li>Continue to coduct reasearch to support my Dissertation and anyalze the data collected.</li>
-                    <li>Continue to support the Digital Harbor Space for All project.</li>
+                    <li>Continue to coduct reasearch to support my Dissertation and anyalze the data collected</li>
+                    <li>Continue to support the Digital Harbor Space for All project</li>
                     <li>Start writting my Defense</li>
                     <br>
-                    <h2>Spring 2026</h2>
-                    <li>Continue research and anaysis of data.</li>
-                    <li>Continue to support the Digital Harbor Space for All project.</li>
+                    <h3>Spring 2026</h3>
+                    <li>Continue research and anaysis of data</li>
+                    <li>Continue to support the Digital Harbor Space for All project</li>
                     <li>Finailze my Defense document</li>
                     <li>Prepare for my Defense</li>
                 </p>
-        
+         <h2>Strengths</h2>
+                <li>Innovative Approach: Ability to design and execute research, focusing on the intersection of Human-Centered Computing, education, and Artificial Intelligence.</li>
+                <li>Diverse Methodologies: Use of qualitative research methods, including user studies, focus groups, participatory design, and data analysis.</li>
+                <li>Leadership: Successfully managed interdisciplinary teams to deliver complex projects on time and within scope.</li>
+                <li>Strategic Planning: Skilled in setting clear objectives, managing timelines, and aligning team efforts with project goals.</li>
+                <li>Stakeholder Engagement: Experienced in collaborating with diverse stakeholders, including educators, researchers, and technology developers, to ensure project alignment with end-user needs.</li>
+                <li>Visionary Thinking: Passionate about leveraging Artificial Intelligence to create inclusive, engaging, and personalized learning experiences.</li>
+                <li>Universal Design for Learning (UDL): Expertise in applying UDL principles to support diverse learner needs, including students with disabilities.</li>
+                <li>Privacy Advocacy: Focused on ensuring ethical use of AI in education, with a strong emphasis on privacy and data protection.</li>
+                <li>Technological Integration: Advancing the integration of AI-driven tools into educational settings to enhance teaching and learning outcomes.</li>
+                    
+                </p>
             </div>
         </section>
         </section>
