--- a/about.html
+++ b/about.html
@@ -205,29 +205,7 @@
                     My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that support teachers in creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions developed are both effective and user-friendly.
                 </p>
             </div>
-                   <h2>Dissertation Plans</h2>
-                <p>
-                    As I work towards completing my disseration, this is my planned timeline. <br>
-                    <h3>Spring 2025</h3>
-                    <li>Complete the comprehesive exam and portfolio review. </li>
-                    <li>Continue my research project on the use of Generative AI in Special Education by conducting a particapatory design study with special edcuators on accessible AI generated leasson plans.</li>
-                    <li>Start writing my proposal document</li>
-                    <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI)</li>
-                    <li>Suport the Digital Harbor Space for All project</li>
-                    <li>Finalize my committee members</li>
-                    <br>
-                    <h3>Fall 2025</h3>
-                    <li>Propose early in the semester</li>
-                    <li>Continue to coduct reasearch to support my Dissertation and anyalze the data collected</li>
-                    <li>Continue to support the Digital Harbor Space for All project</li>
-                    <li>Start writting my Defense</li>
-                    <br>
-                    <h3>Spring 2026</h3>
-                    <li>Continue research and anaysis of data</li>
-                    <li>Continue to support the Digital Harbor Space for All project</li>
-                    <li>Finailze my Defense document</li>
-                    <li>Prepare for my Defense</li>
-                </p>
+             
          <h2>Strengths</h2>
                 <li>Innovative Approach: Ability to design and execute research, focusing on the intersection of Human-Centered Computing, education, and Artificial Intelligence.</li>
                 <li>Diverse Methodologies: Use of qualitative research methods, including user studies, focus groups, participatory design, and data analysis.</li>
@@ -240,6 +218,11 @@
                 <li>Technological Integration: Advancing the integration of AI-driven tools into educational settings to enhance teaching and learning outcomes.</li>
                     
                 </p>
+            <h2>Areas for Improvement</h2>
+            <p>While I have been making progress conducting my research and collecting the data, I need to take more time to further refine and interprete my research findings. I would like to conduct more comprehensive analysis to better understand the themes and align the results with my research objectives.
+               To do this I will need to allocate more time to code and link the data to previous findings. Additionally I would like to continue to write more papers to submit to conferneces to share with the academic community.
+                Another area I would like to improve in is prioritizing research presentations so I can enhance the visibility of my work and also recieve feedback with others in my field.
+            Balancing a fulltime job, voluteer work, home life, classes, and research has been a challenge. Establishing a structured schedule to dedicate consistent time for manuscript preparation and conference participation is needed going forward to help maintain steady progress toward my academic goals.</p>
             </div>
         </section>
         </section>
