--- a/index.html
+++ b/index.html
@@ -176,6 +176,29 @@
                    with a special educator to create a lesson generated with AI that is accessible to students with Autism.   
                               
                </p>
+                      <h2>Dissertation Plans</h2>
+                <p>
+                    As I work towards completing my disseration, this is my planned timeline. <br>
+                    <h3>Spring 2025</h3>
+                    <li>Complete the comprehesive exam and portfolio review. </li>
+                    <li>Continue my research project on the use of Generative AI in Special Education by conducting a particapatory design study with special edcuators on accessible AI generated leasson plans.</li>
+                    <li>Start writing my proposal document</li>
+                    <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI)</li>
+                    <li>Suport the Digital Harbor Space for All project</li>
+                    <li>Finalize my committee members</li>
+                    <br>
+                    <h3>Fall 2025</h3>
+                    <li>Propose early in the semester</li>
+                    <li>Continue to coduct reasearch to support my Dissertation and anyalze the data collected</li>
+                    <li>Continue to support the Digital Harbor Space for All project</li>
+                    <li>Start writting my Defense</li>
+                    <br>
+                    <h3>Spring 2026</h3>
+                    <li>Continue research and anaysis of data</li>
+                    <li>Continue to support the Digital Harbor Space for All project</li>
+                    <li>Finailze my Defense document</li>
+                    <li>Prepare for my Defense</li>
+                </p>
             </ul>
         </section>
       
