--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
             <p>While I have been making progress conducting my research and collecting the data, I need to take more time to further refine and interprete my research findings. I would like to conduct more comprehensive analysis to better understand the themes and align the results with my research objectives.
                To do this I will need to allocate more time to code and link the data to previous findings. Additionally I would like to continue to write more papers to submit to conferneces to share with the academic community.
                 Another area I would like to improve in is prioritizing research presentations so I can enhance the visibility of my work and also recieve feedback with others in my field.
-            Balancing a fulltime job, voluteer work, home life, classes, and research has been a challenge. Establishing a structured schedule to dedicate consistent time for manuscript preparation and conference participation is needed going forward to help maintain steady progress toward my academic goals.</p>
+            Balancing a fulltime career, voluteer work, family, classes, and research has been a challenge. Establishing a structured schedule to dedicate consistent time for manuscript preparation and conference participation is needed going forward to help maintain steady progress toward my academic goals.</p>
             </div>
         </section>
         </section>
