--- a/index.html
+++ b/index.html
@@ -96,29 +96,131 @@
             margin-bottom: 10px;
         }
 
-        .timeline {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marie Sakowicz - Ph.D. Student Portfolio</title>
+    <style>
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f9;
         }
 
-        .timeline-item {
-            background: white;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            border-radius: 10px;
+       header {
+            background: url('Background.jpg') no-repeat center center;
+            background-size: cover;
+            color: white;
+            padding: 40px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 40px;
+        }
+
+        header img {
+            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border: 4px solid white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .header-text {
+            text-align: left;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            gap: 10px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            line-height: 1.2;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin: 0;
+            line-height: 1.4;
+        }
+        nav {
+            background: #eee;
+            padding: 10px;
             text-align: center;
         }
 
-        .timeline-item img {
-            width: 100%;
-            max-width: 250px;
-            height: auto;
-            margin-bottom: 15px;
-            border-radius: 10px;
+        nav a {
+            text-decoration: none;
+            color: #0044cc;
+            padding: 0 10px;
+        }
+
+        nav span.separator {
+            color: #0044cc;
+            margin: 0 5px;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        nav a.current-page {
+            font-weight: 900;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+
+        section {
+            margin-bottom: 40px;
+        }
+
+        h2 {
+            color: #0044cc;
+            border-bottom: 2px solid #0044cc;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+
+        .timeline {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
+        .timeline-box {
+            background: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 5px;
+            width: 300px;
+            text-align: left;
+        }
+
+        .timeline-box h3 {
+            color: #0044cc;
+            margin-top: 0;
+        }
+
+        .timeline-box ul {
+            padding-left: 20px;
+        }
+
+        .timeline-box ul li {
+            text-align: left;
+            margin-bottom: 10px;
         }
 
         footer {
