--- a/index.html
+++ b/index.html
@@ -15,104 +15,6 @@
             background-color: #f4f4f9;
         }
 
-        header {
-            background: url('Background.jpg') no-repeat center center;
-            background-size: cover;
-            color: white;
-            padding: 40px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 40px;
-        }
-
-        header img {
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
-            object-fit: cover;
-            border: 4px solid white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .header-text {
-            text-align: left;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-            line-height: 1.2;
-        }
-
-        header p {
-            font-size: 1.2em;
-            margin: 0;
-            line-height: 1.4;
-        }
-
-        nav {
-            background: #eee;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #0044cc;
-            padding: 0 10px;
-        }
-
-        nav span.separator {
-            color: #0044cc;
-            margin: 0 5px;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        nav a.current-page {
-            font-weight: 900;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-        }
-
-        section {
-            margin-bottom: 40px;
-        }
-
-        h2 {
-            color: #0044cc;
-            border-bottom: 2px solid #0044cc;
-            display: inline-block;
-            margin-bottom: 10px;
-        }
-
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marie Sakowicz - Ph.D. Student Portfolio</title>
-    <style>
-        /* General Styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f4f4f9;
-        }
-
        header {
             background: url('Background.jpg') no-repeat center center;
             background-size: cover;
@@ -235,7 +137,7 @@
                 font-size: 2em;
             }
         }
-    </style>
+  </style>
 </head>
 <body>
     <header>
@@ -258,43 +160,43 @@
     </nav>
 
     <div class="container">
-        <section id="about">
+         <section id="about">
             <h2>My Ph.D. Journey</h2>
-            <p>I entered the HCC Ph.D. program in the Spring of 2024 after completing two years in the Human-Centered Computing (HCC) M.S. program. I was drawn to the research and wanted to continue my journey as a Ph.D. student. My current research focuses on the use of AI-enabled technology in special education and its impact on accessibility for students with disabilities. I plan to propose early in the fall semester of 2025. This semester, I plan to finalize my committee members and continue analyzing the data collected from my study thus far. Additionally, I will conduct a participatory design study with a special educator to create a lesson generated with AI that is accessible to students with Autism.</p>
-        </section>
-
-        <section id="timeline">
+            <p> I entered the HCC Ph.D. program in the Spring of 2024 after completing two years in Human-Centered Computing (HCC) M.S. program. 
+                I was drawn to the research and wanted to continue my journey as a Ph.D. student. My current research is on the use of AI-enabled technology 
+                in special education and the impact on accessibility for students with disabilities. I plan to propose early in the fall semester of 2025. 
+                This semester I plan to finalize my committee members and continue to analyze the data collected from my study thus far. I also will conduct a participatory design study 
+                with a special educator to create a lesson generated with AI that is accessible to students with Autism.   
+            </p>
             <h2>Dissertation Plans</h2>
             <div class="timeline">
-                <div class="timeline-item">
-                    <img src="spring2025.jpg" alt="Spring 2025">
+                <div class="timeline-box">
                     <h3>Spring 2025</h3>
                     <ul>
                         <li>Complete the comprehensive exam and portfolio review.</li>
-                        <li>Conduct participatory design study on AI-generated lesson plans.</li>
+                        <li>Continue my research project on the use of Generative AI in Special Education by conducting a participatory design study with special educators on accessible AI-generated lesson plans.</li>
                         <li>Start writing my proposal document.</li>
-                        <li>Present a talk at N-SEA 2025.</li>
-                        <li>Finalize committee members.</li>
+                        <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
+                        <li>Support the Digital Harbor Space for All project.</li>
+                        <li>Finalize my committee members.</li>
                     </ul>
                 </div>
-                <div class="timeline-item">
-                    <img src="fall2025.jpg" alt="Fall 2025">
+                <div class="timeline-box">
                     <h3>Fall 2025</h3>
                     <ul>
                         <li>Propose early in the semester.</li>
-                        <li>Continue data collection and analysis.</li>
-                        <li>Support the Digital Harbor Space for All project.</li>
-                        <li>Start writing my defense document.</li>
+                        <li>Continue to conduct research to support my Dissertation and analyze the data collected.</li>
+                        <li>Continue to support the Digital Harbor Space for All project.</li>
+                        <li>Start writing my Defense.</li>
                     </ul>
                 </div>
-                <div class="timeline-item">
-                    <img src="spring2026.jpg" alt="Spring 2026">
+                <div class="timeline-box">
                     <h3>Spring 2026</h3>
                     <ul>
-                        <li>Finalize my defense document.</li>
-                        <li>Continue research and data analysis.</li>
-                        <li>Prepare for my defense.</li>
-                        <li>Support the Digital Harbor Space for All project.</li>
+                        <li>Continue research and analysis of data.</li>
+                        <li>Continue to support the Digital Harbor Space for All project.</li>
+                        <li>Finalize my Defense document.</li>
+                        <li>Prepare for my Defense.</li>
                     </ul>
                 </div>
             </div>
@@ -305,7 +207,7 @@
             <ul>
                 <li>
                     <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
-                    <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a>
+                  <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
                 </li>
             </ul>
         </section>
