--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
             margin-top: 0;
         }
 
+        .timeline-box img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+
         .timeline-box ul {
             padding-left: 20px;
         }
@@ -171,6 +178,7 @@
             <h2>Dissertation Plans</h2>
             <div class="timeline">
                 <div class="timeline-box">
+                    <img src="spring2025.jpg" alt="Spring 2025">
                     <h3>Spring 2025</h3>
                     <ul>
                         <li>Complete the comprehensive exam and portfolio review.</li>
@@ -182,6 +190,7 @@
                     </ul>
                 </div>
                 <div class="timeline-box">
+                    <img src="fall2025.jpg" alt="Fall 2025">
                     <h3>Fall 2025</h3>
                     <ul>
                         <li>Propose early in the semester.</li>
@@ -191,6 +200,7 @@
                     </ul>
                 </div>
                 <div class="timeline-box">
+                    <img src="spring2026.jpg" alt="Spring 2026">
                     <h3>Spring 2026</h3>
                     <ul>
                         <li>Continue research and analysis of data.</li>
