--- a/cv.html
+++ b/cv.html
@@ -190,7 +190,7 @@
 
 
     <div class="container">
-        <a href="CV.pdf" class="download-cv" download>Download Full CV (PDF)</a>
+        <a href="cv.pdf" class="download-cv" download>Download Full CV (PDF)</a>
 
     </div>
 
