--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
                         <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
                         <li>Support the Digital Harbor Space for All project.</li>
                         <li>Finalize my committee members.</li>
+                        <li>Propose in May.</li>
                     </ul>
                 </div>
                 <div class="timeline-box">
                     <img src="fall2025.jpg" alt="Fall 2025">
                     <h3>Fall 2025</h3>
                     <ul>
-                        <li>Propose early in the semester.</li>
                         <li>Continue to conduct research to support my Dissertation and analyze the data collected.</li>
                         <li>Continue to support the Digital Harbor Space for All project.</li>
                         <li>Start writing my Defense.</li>
