--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                         <li>Continue my research project on the use of Generative AI in Special Education by conducting a participatory design study with special educators on accessible AI-generated lesson plans.</li>
                         <li>Start writing my proposal document.</li>
                         <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
-                        <li>Support the Digital Harbor Space for All project.</li>
+                        <li>Support the UMBC and Digital Harbor NSF-funded Space for All project.</li>
                         <li>Finalize my committee members.</li>
-                        <li>Propose in May.</li>
+                        <li>Propose late spring or summer 2025.</li>
                     </ul>
                 </div>
                 <div class="timeline-box">
@@ -195,7 +195,8 @@
                     <h3>Fall 2025</h3>
                     <ul>
                         <li>Continue to conduct research to support my Dissertation and analyze the data collected.</li>
-                        <li>Continue to support the Digital Harbor Space for All project.</li>
+                        <li>Continue to support the NSF-funded Space for All project.</li>
+                        <li>Submit particapatory design study paper to CHI 
                         <li>Start writing my Defense.</li>
                     </ul>
                 </div>
@@ -219,6 +220,11 @@
                     <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
                   <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
                 </li>
+                <li>Papers submitted and under review to conferences</li>
+                <br>
+                <li><strong>Perspectives of Special Education Teachers on Using AI-enabled Technologies in the Classroom</strong> - Marie Sakowicz and Foad Hamidi. RESPECT 2025. </li>
+                <br>
+                <li><stong>The (Un)Translated Discipline: The Perspectives of Middle Eastern and North African University Educators on Teaching HCI</stong>- Amina El-Ashry, Marie Sakowicz, and Foad Hamidi. AfriCHI 2025.</li>
             </ul>
         </section>
 
