--- a/projects.html
+++ b/projects.html
@@ -191,7 +191,7 @@
                 <div class="project">
                     <img src="project3.jpg" alt="Project 3">
                     <h3>Space For All</h3>
-                    <p>In partnership with Digital Harbor, Space for All: Creating Accessible Technology-Rich Makerspaces and Learning Activities for Youth and Young Adults with Autism.</p>
+                    <p>A collaboration between University of Maryland Baltimore County (UMBC) and Digital Harbor Foundation (DHF), the NSF-funded Space for All project: Creating Accessible Technology-Rich Makerspaces and Learning Activities for Youth and Young Adults with Autism.</p>
                 </div>
                 <div class="project">
                     <img src="project4.jpg" alt="Project 4">
