--- a/about.html
+++ b/about.html
@@ -207,15 +207,14 @@
             </div>
              
          <h3>Strengths</h3>
-                <li>Innovative Approach: Ability to design and execute research, focusing on the intersection of Human-Centered Computing, education, and Artificial Intelligence.</li>
-                <li>Diverse Methodologies: Use of qualitative research methods, including user studies, focus groups, participatory design, and data analysis.</li>
-                <li>Leadership: Successfully managed interdisciplinary teams to deliver complex projects on time and within scope.</li>
-                <li>Strategic Planning: Skilled in setting clear objectives, managing timelines, and aligning team efforts with project goals.</li>
-                <li>Stakeholder Engagement: Experienced in collaborating with diverse stakeholders, including educators, researchers, and technology developers, to ensure project alignment with end-user needs.</li>
-                <li>Visionary Thinking: Passionate about leveraging Artificial Intelligence to create inclusive, engaging, and personalized learning experiences.</li>
-                <li>Universal Design for Learning (UDL): Expertise in applying UDL principles to support diverse learner needs, including students with disabilities.</li>
-                <li>Privacy Advocacy: Focused on ensuring ethical use of AI in education, with a strong emphasis on privacy and data protection.</li>
-                <li>Technological Integration: Advancing the integration of AI-driven tools into educational settings to enhance teaching and learning outcomes.</li>
+                <li>Strong ability to design and execute research that focuses on the intersection of Human-Centered Computing, education, and Artificial Intelligence.</li>
+                <li>Experienced in the use of qualitative research methods, including user studies, focus groups, participatory design, and data analysis.</li>
+                <li>Skilled in setting clear objectives, managing timelines, and aligning team efforts with project goals.</li>
+                <li>Strong collaborator and able to manage interdisciplinary teams and diverse stakeholders, including educators, researchers, and technology developers, to ensure project success.</li>
+                <li>Passionate about leveraging Artificial Intelligence to create inclusive, engaging, and personalized learning experiences.</li>
+                <li>Knowledgable in the application of Universal Design Learning (UDL) principles to support diverse learner needs, including students with disabilities.</li>
+                <li>Focused on ensuring ethical use of AI in education, with a strong emphasis on privacy and data protection.</li>
+                <li>Committed to advancing the integration of AI-driven tools into educational settings to enhance teaching and learning outcomes.</li>
                     
                 </p>
             <h3>Areas for Improvement</h3>
