--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <h2>My Ph.D. Journey</h2>
             <p> I entered the HCC Ph.D. program in the Spring of 2024 after completing two years in Human-Centered Computing (HCC) M.S. program. 
                 I was drawn to the research and wanted to continue my journey as a Ph.D. student. My current research is on the use of AI-enabled technology 
-                in special education and the impact on accessibility for students with disabilities. I plan to propose early in the fall semester of 2025. 
-                This semester I plan to finalize my committee members and continue to analyze the data collected from my study thus far. I also will conduct a participatory design study 
+                in special education and the impact on accessibility for students with disabilities. I plan to propose late spring or summer of 2025. 
+                This semester I plan to continue to analyze the data collected from my study thus far. I also will conduct a participatory design study 
                 with a special educator to create a lesson generated with AI that is accessible to students with Autism.   
             </p>
             <h2>Dissertation Plans</h2>
