--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                     <strong>An Ecosystem of Support: A US State Government-Supported DIY-AT Program for Residents with Disabilities</strong> - Erin Higgins, Marie E Sakowicz, and Foad Hamidi. 2024. In Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '24). Association for Computing Machinery, New York, NY, USA, Article 52, 1–16.
                   <a href="https://doi.org/10.1145/3663548.3675667" target="_blank">https://doi.org/10.1145/3663548.3675667</a></p>
                 </li>
-                <li>Papers submitted and under review to conferences</li>
+                <h3>Papers submitted and under review to conferences</h3>
                 <br>
                 <li><strong>Perspectives of Special Education Teachers on Using AI-enabled Technologies in the Classroom</strong> - Marie Sakowicz and Foad Hamidi. RESPECT 2025. </li>
                 <br>
-                <li><stong>The (Un)Translated Discipline: The Perspectives of Middle Eastern and North African University Educators on Teaching HCI</stong>- Amina El-Ashry, Marie Sakowicz, and Foad Hamidi. AfriCHI 2025.</li>
+                <li><strong>The (Un)Translated Discipline: The Perspectives of Middle Eastern and North African University Educators on Teaching HCI</stong>- Amina El-Ashry, Marie Sakowicz, and Foad Hamidi. AfriCHI 2025.</li>
             </ul>
         </section>
 
