--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                 </p>
                 
                 <p>
-                    With a background in education and technology, I bridge the gap between theoretical research and practical applications. My work primarily focuses on developing and implementing AI-enabled technologies that enhance educational experiences for students with diverse learning needs.
+                    With a background in educational technology, I bridge the gap between theoretical research and practical applications. My work primarily focuses on developing and implementing AI-enabled technologies that enhance educational experiences for students with diverse learning needs.
                 </p>
 
                 <div class="research-interests">
