--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <br>
                 <li><strong>Perspectives of Special Education Teachers on Using AI-enabled Technologies in the Classroom</strong> - Marie Sakowicz and Foad Hamidi. RESPECT 2025. </li>
                 <br>
-                <li><strong>The (Un)Translated Discipline: The Perspectives of Middle Eastern and North African University Educators on Teaching HCI</stong>- Amina El-Ashry, Marie Sakowicz, and Foad Hamidi. AfriCHI 2025.</li>
+                <li><strong>The (Un)Translated Discipline: The Perspectives of Middle Eastern and North African University Educators on Teaching HCI</strong>- Amina El-Ashry, Marie Sakowicz, and Foad Hamidi. AfriCHI 2025.</li>
             </ul>
         </section>
 
