--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Use of Generative AI for Special Education Environments</h3>
                     <p>Identifying key areas where AI-enhanced tools can enhance lesson planning
-                    for students with ASD by integrating UDL principles. Exploring the use of AI-generated lesson plans to better support
+                    for students with autism spectrum disorder (ASD) by integrating Universal Design Learning (UDL) principles. Exploring the use of AI-generated lesson plans to better support
                     inclusive education and to create a model for AI-assisted lesson planning.</p>
                 </div>
                 <div class="project">
