--- a/about.html
+++ b/about.html
@@ -211,17 +211,13 @@
                 <li>Experienced in the use of qualitative research methods, including user studies, focus groups, participatory design, and data analysis.</li>
                 <li>Skilled in setting clear objectives, managing timelines, and aligning team efforts with project goals.</li>
                 <li>Passionate about leveraging Artificial Intelligence to create inclusive, engaging, and personalized learning experiences.</li>
-                <li>Knowledgable in the application of Universal Design Learning (UDL) principles to support diverse learner needs, including students with disabilities.</li>
+                <li>Knowledgeable in the application of Universal Design Learning (UDL) principles to support diverse learner needs, including students with disabilities.</li>
                 <li>Focused on ensuring ethical use of AI in education, with a strong emphasis on privacy and data protection.</li>
                 <li>Committed to advancing the integration of AI-driven tools into educational settings to enhance teaching and learning outcomes.</li>
                 <li>Strong collaborator and able to manage interdisciplinary teams and diverse stakeholders, including educators, researchers, and technology developers, to ensure project success.</li>
                     
                 </p>
-            <h3>Areas for Improvement</h3>
-            <p>While I have been making progress conducting my research and collecting the data, I need to take more time to further refine and interprete my research findings. I would like to conduct more comprehensive analysis to better understand the themes and align the results with my research objectives.
-               To do this I will need to allocate more time to code and link the data to previous findings. Additionally I would like to continue to write more papers to submit to conferneces to share with the academic community.
-                Another area I would like to improve in is prioritizing research presentations so I can enhance the visibility of my work and also recieve feedback with others in my field.
-            Balancing a fulltime career, voluteer work, family, classes, and research has been a challenge. Establishing a structured schedule to dedicate consistent time for manuscript preparation and conference participation is needed going forward to help maintain steady progress toward my academic goals.</p>
+      
             </div>
         </section>
         </section>
