--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <li>Present a talk on my research at N-SEA 2025 (the National Symposium on Equitable AI).</li>
                         <li>Support the UMBC and Digital Harbor NSF-funded Space for All project.</li>
                         <li>Finalize my committee members.</li>
-                        <li>Propose late spring or summer 2025.</li>
+                        <li>Propose late summer 2025.</li>
                     </ul>
                 </div>
                 <div class="timeline-box">
@@ -224,9 +224,9 @@
             <ul>
          <h3>Papers submitted and under review to conferences</h3>
                 <br>
-                <li><strong>Perspectives of Special Education Teachers on Using AI-enabled Technologies in the Classroom</strong> - Marie Sakowicz and Foad Hamidi. RESPECT 2025. </li>
+                <li><strong>Exploring the Role of Generative AI in Supporting Students with Disabilities, Through the Lens of Universal Design for Learning (UDL) </strong> - Marie Sakowicz and Foad Hamidi. ASSETS 2025.</li>
                 <br>
-                <li><strong>The (Un)Translated Discipline: The Perspectives of Middle Eastern and North African University Educators on Teaching HCI</strong>- Amina El-Ashry, Marie Sakowicz, and Foad Hamidi. AfriCHI 2025.</li>
+                <li><strong>ABii at School: Findings from a Long-Term In-School Field Study with a Commercial Robot-Assisted Learning System.</strong>- Lujie Karen Chen, LeaAnne Daughrity, Marie Sakowicz, Foad Hamidi, Karrie Godwin, and Lin Lin Lipsmeyer. ETRD 2025.</li>
             </ul>
         </section>
 
@@ -241,7 +241,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Marie Sakowicz. All rights reserved.</p>
+        <p>&copy; 2025 Marie Sakowicz. All rights reserved.</p>
     </footer>
 </body>
 </html>
