--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <p>
-                    I am a Ph.D. student in Human-Centered Computing at the University of Maryland Baltimore County (UMBC). My research journey is driven by a deep passion for making technology accessible and beneficial for all learners, particularly focusing on special education and assistive technologies.
+                    I am a Ph.D. candidate in Human-Centered Computing at the University of Maryland Baltimore County (UMBC). My research journey is driven by a deep passion for making technology accessible and beneficial for all learners, particularly focusing on the use of generative AI for special education.
                 </p>
                 
                 <p>
@@ -202,7 +202,7 @@
 
                 <h3>Current Research</h3>
                 <p>
-                    My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that support teachers in creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions developed are both effective and user-friendly.
+                    My current research explores the intersection of artificial intelligence and special education, with a particular focus on developing AI-enabled tools that supports creating personalized learning experiences for students with autism spectrum disorder (ASD). This work involves close collaboration with educators, students, and families to ensure that the technology solutions developed are both effective and user-friendly.
                 </p>
             </div>
              
@@ -224,7 +224,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Marie Sakowicz. All rights reserved.</p>
+        <p>&copy; 2025 Marie Sakowicz. All rights reserved.</p>
     </footer>
 </body>
 </html>
